--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Modelos Matemáticos en Ecología I"
+title: "Modelado y Análisis Espacial"
 author: "Gerardo Martín"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -7,7 +7,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib, citas.bib]
 biblio-style: apalike
 link-citations: yes
-description: "Sitio del curso de la Licenciatura en Ecología de la ENES unidad Mérida"
+description: "Sitio del curso de la Licenciatura en Ciencias Ambientales | ENES unidad Mérida"
 ---
 
 # Preámbulo
@@ -17,7 +17,7 @@ description: "Sitio del curso de la Licenciatura en Ecología de la ENES unidad 
 knitr::include_graphics("logo.png")
 ```
 
-En el curso **Modelos matemáticos en ecología** aprenderemos a utilizar algunas herramientas matemáticas para entender procesos en ecología. Los contenidos del índice se apegan al [programa completo del curso](Programa-curso.pdf), el cual se impartirá en los [horarios normales establecidos](Horario.pdf). Para conocer cuándo, cómo y qué temas se se impartirán puedes consultar la [estrategia docente](Estrategia-docente.pdf).
+En el curso **Modelado y Análisis Espacial** aprenderemos a utilizar algunas herramientas para aprender a usar herramientas geográficas para analizar y representar procesos ambientales en el espacio. Los contenidos del índice se apegan al [programa completo del curso](Programa-curso.pdf), el cual se impartirá en los [horarios normales establecidos](Horario.pdf). Para conocer cuándo, cómo y qué temas se se impartirán puedes consultar la [estrategia docente](Estrategia-docente.pdf).
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
