--- a/Mod-mat-ECO.tex
+++ b/Mod-mat-ECO.tex
@@ -276,14 +276,22 @@ Es posible modelar datos vectoriales, puntos y hasta ráster.
 
 Ejemplos clásicos abundan en la literatura médica, donde típicamente se analiza el número de casos por polígono de alguna enfermedad.
 
-\href{https://www.multibugs.org/documentation/latest/spatial/maps2.bmp}{Casos de cancer labial en Escocia}
+\begin{figure}
+\centering
+\includegraphics{https://www.multibugs.org/documentation/latest/spatial/maps2.bmp}
+\caption{Casos de cancer labial en Escocia}
+\end{figure}
 
 \hypertarget{ruxe1ster}{%
 \subsection{Ráster}\label{ruxe1ster}}
 
 El típico análisis de imágenes ráster es el desarrollo de mapas de uso de suelo. Sin embargo existen otras aplicaciones como la estimación de densidad poblacional de humanos a partir de imágenes satelitales.
 
-\href{https://www.worldpop.org/img/methods2/populations/thumbnail_peanutButter_overview3.jpg}{Estimación de densidad poblacional combinando imágenes satelitales y vectoriales}
+\begin{figure}
+\centering
+\includegraphics{https://www.worldpop.org/img/methods2/populations/thumbnail_peanutButter_overview3.jpg}
+\caption{Estimación de densidad poblacional combinando imágenes satelitales y vectoriales}
+\end{figure}
 
 \hypertarget{unidad-ii}{%
 \chapter{Unidad II}\label{unidad-ii}}
