--- a/Unidad-I/Modelado-espacial.Rmd
+++ b/Unidad-I/Modelado-espacial.Rmd
@@ -31,9 +31,9 @@ A este fenómeno se le conoce como autocorrelación espacial, es decir que una v
 
 #### La estructura espacial
 
-Cuando decimos que una base de datos está estructurada quiere decir que cada observación tiene un lugar exacto dentro de la base. El ejemplo más sencillo es de una serie temporal, donde los datos están ordenados en relación al tiempo en que fueron colectados, y sus valores también dependen del tiempo (\@ref(fig:Serie-temporal))
+Cuando decimos que una base de datos está estructurada quiere decir que cada observación tiene un lugar exacto dentro de la base. El ejemplo más sencillo es de una serie temporal, donde los datos están ordenados en relación al tiempo en que fueron colectados, y sus valores también dependen del tiempo (\@ref(fig:Serie-temporal)).
 
 ```{r Serie-temporal, echo = F, fig.align='center', fig.cap="Estructura temporal de una base de datos"}
-knitr::include_graphics("Estructura-temporal.png")
+knitr::include_graphics("Unidad-II/Estructura-temporal.png")
 ```
 
