--- a/Unidad-II/Interpolacion.Rmd
+++ b/Unidad-II/Interpolacion.Rmd
@@ -38,7 +38,50 @@ Este es el método de interpolación más sencillo que existe y consiste en asum
 
 ### Regresión sobre las coordenadas
 
+Es un método sencillo pero efectivo si la variable que queremos interpolar tiene un gradiente a lo largo de la longitud y/o latitud que se puede aproximar por medio de un modelo lineal. La idea es que la variable de respuesta ($y$), sea una función lineal de las coordenadas ($x_1, x_2$):
+
+$$ y(Lat, Lon) = \alpha + \beta_1 Lat + \beta_2 Lon$$
+
+```{r Gradientes, echo=F, fig.align='center', fig.cap="Ejemplos de gradientes lineales con las coordenadas.", fig.height=5, fig.width=10, message=FALSE, warning=FALSE}
+x <- seq(0, 1, len = 10)
+y <- seq(0, 1, len = 10)
+
+df.1 <- expand.grid(x = x, y = y)
+
+df.1$z1 <- with(df.1, (x + y)/2)
+df.1$z2 <- df.1$x
+
+#Muestras
+x1 <- runif(20)
+y1 <- runif(20)
+z1.1 <- (x1 + y1)/2
+
+x2 <- runif(20)
+y2 <- runif(20)
+
+library(raster)
+
+r <- rasterFromXYZ(df.1)
+
+par(mfrow = c(1, 2))
+plot(r[[1]], main = "Gradiente 1")
+points(x1, y1, cex = z1.1*1.5)
+
+plot(r[[2]], main = "Gradiente 2")
+points(x2, y2, cex = x2*1.5)
+```
+Al igual que con los modelos lineales, este tipo de interpolación puede ser muy flexible, aunque cuando la variable dependiente $y$ es poco lineal con respecto de la latitud y longitud se recomienda usar **Splines**
+
 ### Splines
 
-### Implementación
+Son una metodología muy similar a la regresión por coordenadas pero no asume ningún tipo de relación funcional entre la latitud y longitud y la variable de respuesta. La manera en que funcionan las splines es ajustando líneas de regresión con un polinomio de 2o o 3er grado a porciones específicas de cada variable independiente. El resultado de usar splines pueden ser curvas complejas con un contorno suave.
+
+![](https://i0.wp.com/freakonometrics.hypotheses.org/files/2016/01/splines03.png?w=578&ssl=1)
+
+[Ejemplo de regresión con splines por Arthur Charpentier](https://i0.wp.com/freakonometrics.hypotheses.org/files/2016/01/splines03.png?w=578&ssl=1)
+
+### Tutorial de interpolación en R
+
+
+
 
