--- a/Unidad-III/Desarrollo.Rmd
+++ b/Unidad-III/Desarrollo.Rmd
@@ -1,4 +1,4 @@
-Un modelo digital de elevación es un ráster que contien información sobre la elevación sobre el nivel del mar. Información sobre la elevación es de gran importancia para el análisis de muchos procesos como los climáticos, topográficos e hidrológicos. En climatología, la elevación está muy relacionada con las temperaturas y las lluvias. En topografía, la elevación se puede utiizar para encontrar la inclinación o pendiente de un terreno, el aspecto, o dirección de la inclinación y capacidad para almacenar agua. En hidrología la elevación se puede utilizar para estimar el tamaño potencial de los cuerpos de agua, la velocidad o fuerza con que puede descender el agua de una montaña, identificar ríos y zonas inundables. La aplicaciones del modelo digital de elevación en topografía e hidrología se conoce como **Geomorfología**.
+Un modelo digital de elevación es un a representación ráster de la elevación sobre el nivel del mar de la superficie terrestre. La información sobre la elevación es muy importante para el análisis del clima, topografía e hidroligía. En climatología, la elevación está muy relacionada con las temperaturas y las lluvias. En topografía, la elevación se puede utiizar para encontrar la inclinación o pendiente de un terreno, el aspecto, o dirección de la inclinación y capacidad para almacenar agua. En hidrología la elevación se puede utilizar para estimar el tamaño potencial de los cuerpos de agua, la velocidad o fuerza con que puede descender el agua de una montaña, identificar ríos y zonas inundables. La aplicaciones del modelo digital de elevación en topografía e hidrología se conoce como **Geomorfología**.
 
 ```{r echo = F, fig.align='center', fig.cap="Modelo digital de elevación", message=F, warning = F, fig.width=7, fig.height=7}
 
@@ -16,7 +16,7 @@ Para la creación de modelos digitales de elevación de mayor resolución se nec
 
 ### Tutorial de desarrollo de MDE
 
-Este tutorial consiste de la interpolación de unos puntos con mediciones de elevación en QGIS [el tutorial original es parte de una capacitaicón en QGIS](https://giscrack.com/building-a-qgis-3-digital-elevation-model/). Además de la interpolación, vamos a utilizar una capa de ríos para dotar de información topográfica a las interpolaciones. Los datos del tutorial los encuentras en [esta liga](Unidad-III/datos_mde.zip).
+Este tutorial consiste de la interpolación de unos puntos con mediciones de elevación en QGIS ([el tutorial original es parte de una capacitaicón en QGIS](https://giscrack.com/building-a-qgis-3-digital-elevation-model/)). Además de la interpolación, vamos a utilizar una capa de ríos para dotar de información topográfica a las interpolaciones. Los datos del tutorial los encuentras en [esta liga](Unidad-III/datos_mde.zip).
 
 Los datos disponibles son:
 
