--- a/04-Unidad-III.Rmd
+++ b/04-Unidad-III.Rmd
@@ -8,7 +8,7 @@
 
 ## Cálculo de parámetros morfométricos
 
-```{r echo = F, hild = "Unidad-III/Calculo-morfometricos.Rmd"}
+```{r echo = F, child = "Unidad-III/Calculo-morfometricos.Rmd"}
 
 ```
 
